SourceOrg/src/objects/Junction_Object__c.object
<CustomObject>
    <description>Joins Wellspring and Reggie Contacts to engagements</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connects the Junction Object to the Contact Object</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Additional Engagements</relationshipLabel>
        <relationshipName>Junction_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement_Owner__c</fullName>
        <description>Shows where the Junction Object originates from</description>
        <label>Engagement Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connects the Junction Object to the Engagement Object</description>
        <label>Engagement</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Junction Objects</relationshipLabel>
        <relationshipName>Junction_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reggie_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connects the Junction Object to the Reggie Contact</description>
        <label>Reggie Contact</label>
        <referenceTo>Reggie_Contact__c</referenceTo>
        <relationshipLabel>Junction Objects</relationshipLabel>
        <relationshipName>Junction_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connects the Junction Object to the Source Org Object</description>
        <label>Source Organization</label>
        <referenceTo>Source_Organization__c</referenceTo>
        <relationshipLabel>Junction Objects</relationshipLabel>
        <relationshipName>Junction_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Junction Object</label>
    <nameField>
        <displayFormat>J{0}</displayFormat>
        <label>Junction Object Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junction Objects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>